# amber

./: .amber.toml  .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_95_ROADMAP.md  Cargo.toml  DEPENDENCIES.md  ENTERPRISE_ASSESSMENT.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  VERSIONING.md  tarpaulin.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  deploy-website.yml
.kaptaind/: ast_cache.json  status.json  telemetry.json  version_cache.json
.kaptaind/analysis/: 0fd4442d-3931-4cf6-ade5-8ff76c4f7f66.json  1c3b9715-2153-4a2e-ad46-dd488607a5a6.json  1e83380c-8c60-43e9-8604-6c82c8e8a4f8.json  47733622-db2e-48ed-b141-1c23b75ef5b0.json  4bf1156e-f60d-42c6-8c83-122347840ce6.json  6390315d-adc5-43ad-a08c-a836d53124ed.json  6a82d06b-2aba-4fcb-ae9f-d7fa8a45b64d.json  824a2e9c-adf7-4cb2-9499-2b2ab3b0d22d.json  9fe414ca-2549-48c4-a62b-1188a662ab2f.json  ada275a6-60cf-4626-aa73-776d224c1793.json  c050b1ff-ac0a-4b9c-8f02-8c4729c667bd.json  c0dc4a74-5603-4fd8-9428-53ef4184f5d4.json  cb8096bb-00e5-4c3e-a9ac-aba080768222.json  d7b5e97d-2f0d-4637-ad76-db79ac09a03f.json  dc5902db-d205-4143-b54b-e761e15038e8.json  f891f131-51cc-4df7-8e4d-1df72cde1c9d.json  ff3af2be-05fe-4d0e-ad31-00c1d5d87946.json
benches/: amber_benchmarks.rs  amber_library.rs
docs/: OPERATOR_RUNBOOK.md  README.md  library.md
docs/benchmarks/: library.md
docs/directives/: colored.md  tempfile.md  walkdir.md
docs/man/: amber.1  amber.1.md
docs/roadmap/: RELEASE_READINESS.md  V0_3_SELF_HOSTING.md
docs/vhs/: Containerfile  README.md  build.sh
docs/vhs/fixture/: .amber.toml  Cargo.toml
docs/vhs/fixture/src/: main.rs
docs/vhs/tapes/: amber-analyze.tape  amber-emoji-analyze.tape  amber-emoji-score.tape  amber-help.tape  amber-propose.tape  amber-score.tape
examples/: basic.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: config_parse.rs
src/: amber_anyhow.rs  lib.rs  main.rs  temp.rs
src/analysis/: mod.rs  repo.rs  types.rs  usage.rs  walker.rs
src/cli/: analyze.rs  directives.rs  library.rs  list.rs  mod.rs  paths.rs  replace.rs  roadmap.rs  score.rs
src/config/: mod.rs
src/metadata/: mod.rs  offline.rs  online.rs  rustsec.rs
src/replacement/: directives.rs  generator.rs  mod.rs  templates.rs  validator.rs
src/replacement/template_data/: anyhow.rs  byteorder.rs  cfg_if.rs  chrono.rs  colored.rs  either.rs  env_logger.rs  home_dirs.rs  humantime.rs  lazy_static.rs  log.rs  maplit.rs  once_cell.rs  regex.rs  tap.rs  thiserror.rs  toml.rs  tracing.rs  tracing_subscriber.rs  ureq.rs
src/reporting/: formatters.rs  mod.rs  style.rs
src/scoring/: classifier.rs  mod.rs  rules.rs
tests/: cli_tests.rs  integration_tests.rs
tests/fixtures/derive_macro/: Cargo.toml
tests/fixtures/derive_macro/src/: main.rs
tests/fixtures/glob_import/: Cargo.toml
tests/fixtures/glob_import/src/: main.rs
tests/fixtures/path_dependency_project/app/: Cargo.toml
tests/fixtures/path_dependency_project/helper/: Cargo.toml
tests/fixtures/path_dependency_project/nested_helper/: Cargo.toml
tests/fixtures/renamed_cargo_dependency/: Cargo.toml
tests/fixtures/renamed_cargo_dependency/path_helper/: Cargo.toml
tests/fixtures/renamed_import/: Cargo.toml
tests/fixtures/renamed_import/src/: main.rs
tests/fixtures/sample_project/: Cargo.toml
tests/fixtures/sample_project/src/: main.rs
tests/fixtures/sample_project/unused_crate/: Cargo.toml
website/: README.md  downloads.html  index.html  pricing.html
website/css/: styles.css
website/data/: releases.json
website/js/: pricing.js  releases.js
(+1 files in other folders)
