[package]
name = "sample-app"
version = "0.1.0"
edition = "2021"
description = "Generic demo fixture used by Amber's reproducible VHS recordings."
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
# Intentionally present but lightly used so Amber has something to flag.
walkdir = "2"
